# mo2-download-manager

./: .gitignore  README.md  __init__.py  class_helpers.py  download_entry.py  download_manager_model.py  download_manager_plugin.py  download_manager_table_model.py  download_manager_window.py  hash_worker.py  mo2_compat_utils.py  multi_filter_proxy_model.py  nexus_api.py  pylintrc  pyproject.toml  requirements.txt  ui_statics.py  util.py
.github/workflows/: build-release.yml  pylint.yml
api/: nexus_api.py
gui/: __init__.py  download_manager_window.py  hash_worker.py
model/: __init__.py  download_entry.py  download_manager_model.py  download_manager_table_model.py
nexus/: __init__.py  nexus_api.py
plugin/: __init__.py  download_manager_plugin.py
src/: bulk_install_dialog.py  download_entry.py  download_manager_model.py  download_manager_plugin.py  download_manager_table_model.py  download_manager_window.py  download_sort_filter_proxy_model.py  downloads_table.py  hash_worker.py  mo2_compat_utils.py  nexus_api.py  ui_statics.py  util.py
util/: __init__.py
